--- a/package.json
+++ b/package.json
@@ -4,28 +4,16 @@
   "description": "",
   "main": "disqus-sdk.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "babel ./disqus-sdk.js --watch --source-maps --out-file dist/dist.js"
   },
   "author": "WXiaoming",
   "license": "MIT",
   "devDependencies": {
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-preset-es2015": "^6.13.2",
-    "css-loader": "^0.23.1",
-    "es6-promise": "^3.2.1",
-    "eslint": "^3.2.2",
-    "exports-loader": "^0.6.3",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "imports-loader": "^0.6.5",
-    "postcss-cssnext": "^2.7.0",
-    "postcss-import": "^8.1.2",
-    "postcss-loader": "^0.9.1",
-    "postcss-nested": "^1.0.0",
-    "postcss-opacity": "^4.0.0",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.1"
+    "babel-cli": "^6.11.4",
+    "babel-preset-es2015": "^6.13.2"
+  },
+  "dependencies": {
+    "mustache": "^2.2.1",
+    "whatwg-fetch": "^1.0.0"
   }
 }
