--- a/package.json
+++ b/package.json
@@ -10,7 +10,16 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.11.4",
-    "babel-preset-es2015": "^6.13.2"
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-runtime": "^6.12.0",
+    "babel-preset-es2015": "^6.13.2",
+    "css-loader": "^0.23.1",
+    "html-loader": "^0.4.3",
+    "postcss-cssnext": "^2.7.0",
+    "postcss-loader": "^0.10.0",
+    "postcss-nested": "^1.0.0",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.1"
   },
   "dependencies": {
     "mustache": "^2.2.1",
