--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "mustache": "^2.2.1",
     "normalize.css": "^4.2.0",
+    "sweetalert": "^1.1.3",
     "whatwg-fetch": "^1.0.0"
   }
 }
