--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "disqusjs",
-  "version": "2.0.0-beta",
+  "version": "2.0.0",
   "description": "disqus client sdk",
   "main": "index.js",
   "scripts": {
