--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "disqus client sdk",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dashboard -- webpack-dev-server -w"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,23 @@
   "bugs": {
     "url": "https://github.com/jiananshi/DisqusJS/issues"
   },
-  "homepage": "https://github.com/jiananshi/DisqusJS#readme"
+  "homepage": "https://github.com/jiananshi/DisqusJS#readme",
+  "dependencies": {
+    "normalize.css": "^7.0.0",
+    "vue": "^2.4.4",
+    "vueify": "^9.4.1"
+  },
+  "devDependencies": {
+    "css-loader": "^0.28.7",
+    "html-webpack-plugin": "^2.30.1",
+    "postcss": "^6.0.13",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-loader": "^2.0.6",
+    "postcss-nested": "^2.1.2",
+    "style-loader": "^0.19.0",
+    "vue-loader": "^13.0.5",
+    "webpack": "^3.6.0",
+    "webpack-dashboard": "^1.0.0-5",
+    "webpack-dev-server": "^2.9.1"
+  }
 }
